--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.9",
     "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.11.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -35,7 +35,7 @@
     "redux": "^3.6.0",
     "sass-loader": "^6.0.3",
     "standard": "^10.0.2",
-    "webpack": "^2.5.1",
+    "webpack": "^2.7.0",
     "webpack-cli": "^3.2.3",
     "webpack-stream": "^3.2.0"
   },
@@ -43,13 +43,15 @@
     "bundle": "./node_modules/.bin/webpack",
     "production": "./node_modules/.bin/webpack -p",
     "build": "webpack --mode production",
+    "mywatch": "webpack webpack.config.js",
     "watch": "gulp",
     "sass": "gulp styles",
     "js": "gulp webpack"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.5.0",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "webpack-dev-server": "^3.2.1"
   }
 }
